--- a/style.css
+++ b/style.css
@@ -6,26 +6,28 @@
 
 body{
     background-color: whitesmoke;
-    width: 90%;
+    width: 70%;
     height: 100%;
     margin: 0 auto;
 }
+header{
+    width: 70%;
+    margin: 0 auto;
+    padding-bottom: 4em;
+}
 header nav div.leftside {
   float:left;
-   width: 50%;
+  
    
 }
 
 
 nav{
-    /* border-bottom: solid 10px ;
-    padding: 10px;
-    border-image: url(img/hr-img.png) 27 0 / 10px 30px  round space;; */
-    margin-top: 0px;
-    width: 100%;
-   position: absolute;
-   right: 5%;
-   top: 1%;
+   
+    margin-top: 0.6em;
+    position: absolute;
+    right: 0%;
+    top: 12%;
 }
 header  div.leftside img{
     float:left;
@@ -49,9 +51,9 @@ p span {
    
 }
 
-header nav div.rightside  {
-    float:right;
-    margin-top: 15px;
+.rightside  {
+    position: relative;
+    margin-top: 2em;
     
    
 }
@@ -61,9 +63,9 @@ header nav div.rightside  {
 }
 main{
     clear: both;
-    padding-top: 100px;
+    padding-top: 4em;
     
-    width: 100%;
+    width: 70%;
     margin: 0 auto;
     
 }
@@ -76,7 +78,7 @@ section#photoSec p {
     font-family: Arial, Helvetica, sans-serif;
     color: silver;
     font-size: 12px;
-    margin-bottom: 60px;
+    margin-bottom:1.7em;
 }
 section#photoSec span {
 color: black;
@@ -88,46 +90,145 @@ section#photoSec{
     position: relative;
 }
 .mainRight  {
-
+display: flex;
     position:absolute;
     right: 1%;
-    top: 3%;
+    top: 6%;
 }
 .mainContent p {
     margin-bottom: 30px;
 text-indent: 30px;
-font-size: 25px;
+font-size: 20px;
 color: #5f5f5ffb;
+
 }
 
-.list ul {
-    float: left;
-    width: 100%;
-    list-style: none;
-    
-    
+fieldset{
+    display: flex;
 }
-section.mainBottom {
-    clear: both;
+
+#leftList, #rightList {
+    list-style: none;
+    flex: 50%;
+   
 }
 #leftList {
-    float: left;
-    list-style: none;
-    width: 50%;
+    margin-left: 5%;
 }
-#rightList{
+#rightList {
+   margin-left:120px
+}
 
-}
+
 form {
-    width: 100%;
-    margin: 0 auto;
-    margin-left: 2%;
+   display: inline-block;
+   
+   text-align: left;
+   margin-left: 5%;
+   margin-top: 4.8%;
+  padding-bottom: 20px;
+  
     
 }
+form li {
+    margin-bottom: 7px;
+    color: rgb(49, 42, 34);
+    font-size: 20px;
+}
 .form {
+   
+    
+   margin-bottom: 40px;
     background-image: url(https://github.com/LTUC/amman-201d19/blob/master/class-10/lab-a/lab-assets/list-bg.png?raw=true);
     background-repeat: no-repeat;
     background-size: cover;
 }
+hr {
+    clear: both;
+    width: 70%;
+    background-image: url(img/hr-img.png);
+    height: 0.6em;
+    border: none;
+}
+section.mainBottom {
+    clear: both;
+    margin-top: 20px;
+    position: relative;
+   
+}
+main hr {
+    width: 100%;
+}
+.mainBottom div.bottomLeft{
+   position: absolute;
+   left: 0%;
+   display: flex;
+    width: 75%;
+   align-items:start;
+}
+.bottomLeft div {
+    flex:50%;
+}
+.mainBottom div.bottomRight{
+    position: absolute;
+    right: 0%;
+    margin-top: 12px;
+ }
+.Vanessa {
+    margin-left: 3%;
+}
+.Vanessa h3 {
+    margin-bottom: 2%;
+    font-size: 1.5em;
+    font-weight: 700;
+    color: rgb(82, 80, 80);
+    font-family:'Times New Roman', Times, serif;
+}
+.Vanessa p {
+    font-weight: 200;
+    color: rgb(92, 92, 92);
+    font-size: 1.2em;
+}
+button {
+    background-color: rgb(168, 86, 66);
+    color: white;
+    font-weight: 100;
+    border: none;
+    font-size:1.2em;
+    padding: 0.8em 1.8em;
+    text-align: center;
+    
 
+}
+footer{
+    position: relative;
+    padding-top: 8em;
+    clear: both;
+    width: 70%;
+    margin: 0 auto;
+    text-align: center;
+}
+.img {
+    margin-top: 30px;
+}
 
+  .line span {
+    display: inline-block;
+    position: relative; 
+  }
+.line span, .line span {
+    height: 16px;
+    border-bottom: 1px solid rgb(211, 211, 211);
+    width: 100%;
+}
+footer p {
+    color: rgb(151, 151, 151);
+    margin-top: 20px ;
+    margin-bottom: 80px;
+}
+input:checked + label {
+ text-decoration: line-through;
+}
+label {
+    margin-left: 10px;
+}
